@@ -1,3 +1,9 @@
+2001-10-14  Ulrik Haugen  <qha@lysator.liu.se>
+
+	* lyskom-buttons.el (kom-previous-link, kom-next-link): look
+	for property lyskom-button in stead of lyskom-button-text.
+	(lyskom-generate-button): new arg sublte, callers changed.
+
 2001-10-13  Ulrik Haugen  <qha@lysator.liu.se>
 
 	* swedish-strings.el, english-strings.el (lyskom-message,
